log
Wed 03 May 2023 01:39:15 AM UTC: 
 tests:  0|5
total_score: 0/70
684bd6c
Wed 03 May 2023 01:46:05 AM UTC: 
 sudoku.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:59:17: error: unused variable ‘new_node’ [-Werror=unused-variable]
   59 |           Node* new_node=copy(n);
      |                 ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
d29d10b
Wed 03 May 2023 01:46:43 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:59:17: error: unused variable ‘new_node’ [-Werror=unused-variable]
   59 |           Node* new_node=copy(n);
      |                 ^~~~~~~~
sudoku.c:54:9: error: unused variable ‘list’ [-Werror=unused-variable]
   54 |   List* list=createList();
      |         ^~~~
cc1: all warnings being treated as errors
Compilation failed
7da2922
Wed 03 May 2023 01:48:50 AM UTC: 
 sudoku.c | 6 ++++++
 1 file changed, 6 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:63:25: error: unused variable ‘new_node’ [-Werror=unused-variable]
   63 |                   Node* new_node=copy(n);
      |                         ^~~~~~~~
sudoku.c:54:9: error: unused variable ‘list’ [-Werror=unused-variable]
   54 |   List* list=createList();
      |         ^~~~
cc1: all warnings being treated as errors
Compilation failed
0d11577
Wed 03 May 2023 01:49:52 AM UTC: 
 sudoku.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  0|0
00689b5
Wed 03 May 2023 01:50:21 AM UTC: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:65:19: error: implicit declaration of function ‘insertBack’ [-Werror=implicit-function-declaration]
   65 |                   insertBack(adj_list,nuevo_node);
      |                   ^~~~~~~~~~
sudoku.c:65:30: error: ‘adj_list’ undeclared (first use in this function)
   65 |                   insertBack(adj_list,nuevo_node);
      |                              ^~~~~~~~
sudoku.c:65:30: note: each undeclared identifier is reported only once for each function it appears in
cc1: all warnings being treated as errors
Compilation failed
9529703
Wed 03 May 2023 01:50:25 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:65:19: error: implicit declaration of function ‘insertBack’ [-Werror=implicit-function-declaration]
   65 |                   insertBack(list,nuevo_node);
      |                   ^~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
840ee51
Wed 03 May 2023 01:51:53 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
5444822
Wed 03 May 2023 01:53:35 AM UTC: 
 sudoku.c | 10 ----------
 1 file changed, 10 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:55:17: error: ‘i’ undeclared (first use in this function)
   55 |   for(int k=0 ; i<9 ; k++)
      |                 ^
sudoku.c:55:17: note: each undeclared identifier is reported only once for each function it appears in
sudoku.c:58:25: error: ‘j’ undeclared (first use in this function)
   58 |     nuevo_node->sudo[i][j]=k;
      |                         ^
Compilation failed
a31015d
Wed 03 May 2023 01:53:57 AM UTC: 
 sudoku.c | 12 +++++++++++-
 1 file changed, 11 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
69d6027
Wed 03 May 2023 01:55:22 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
b086064
Wed 03 May 2023 01:55:38 AM UTC: 
 sudoku.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  0|0
143ce5c
Wed 03 May 2023 01:55:54 AM UTC: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|5
total_score: 0/70
7234e7a
Wed 03 May 2023 01:56:49 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
6ec785c
Wed 03 May 2023 01:57:02 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 5/70
1919b4f
Wed 03 May 2023 01:57:19 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 5/70
a644e11
Wed 03 May 2023 01:59:27 AM UTC: 
 sudoku.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  1|5
total_score: 5/70
d9f8c43
Wed 03 May 2023 02:00:52 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
1059e1a
